--- a/blueprints/event_summary.yaml
+++ b/blueprints/event_summary.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: AI Event Summary (LLM Vision v1.3.1)
+  name: PsychOsmosis Event Summary (LLM Vision v1.3.1)
   author: valentinfrlch
   description: >
     AI-powered security event summaries for frigate or camera entities. 
