--- a/blueprints/2nd-Floor.yaml
+++ b/blueprints/2nd-Floor.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: PsychOsmosis 1st Floor
+  name: PsychOsmosis 2nd Floor
   author: PsychOsmosis
   description: >
     AI-powered security event summaries for frigate or camera entities. 
