--- a/blueprints/event_summary.yaml
+++ b/blueprints/event_summary.yaml
@@ -251,7 +251,15 @@ condition:
       {% else %}
         {{ state_attr(this.entity_id, 'last_triggered') is none or (now() - state_attr(this.entity_id, 'last_triggered')).total_seconds() / 60 > cooldown }}
       {% endif %}
-
+  - condition: time
+    after: "17:00:00"
+    before: "08:00:00"
+    weekday:
+      - mon
+      - tue
+      - wed
+      - thu
+      - fri
 
 action:
   - choose:
